--- a/.mrjob.conf
+++ b/.mrjob.conf
@@ -12,13 +12,27 @@ runners:
     - english
     - postcodes.csv
     - MrJob.pem
+    - terms.csv
     bootstrap:
     - sudo easy_install -U distribute
     - sudo apt-get install -y python-pip
     - sudo pip install -U numpy
     - sudo pip install -U pyyaml nltk
     - sudo pip install scipy
-    ec2_instance_type: m1.small
-    num_ec2_core_instances: 1
+    ec2_instance_type: m2.4xlarge
+    num_ec2_core_instances: 3
     cmdenv:
       TZ: America/Los_Angeles
+  hadoop:
+    jobconf:
+      mapred.task.timeout: 3600000
+    setup:
+    - VENV=/tmp/$mapred_job_id
+    - if [ ! -e $VENV ]; then virtualenv $VENV; fi
+    - . $VENV/bin/activate
+    - pip install mr3po simplejson
+    - sudo easy_install -U distribute
+    - sudo apt-get install -y python-pip
+    - sudo pip install -U numpy
+    - sudo pip install -U pyyaml nltk
+    - sudo pip install scipy
