Change of twitter score, cardinality of tweet not the number of unique markers used.

--- a/.mrjob.conf
+++ b/.mrjob.conf
@@ -1,38 +1,9 @@
 runners:
-  emr:
-    aws_access_key_id: AKIAJIOP5GL3FK47KXMA
-    aws_region: us-east-1
-    ec2_key_pair: MrJob
-    aws_secret_access_key: 4XpDPdylnfN+Uf7lw+VWHqieOwoyFrqM8QH9tX1g
-    ec2_key_pair_file: MrJob.pem
-    ssh_tunnel_to_job_tracker: true
-    enable_emr_debugging : true
+  hadoop:
+    hadoop_home: /usr/local/hadoop/
+    hdfs_scratch_dir: /app/hadoop/tmp/
     upload_files:
     - postcodeareas.csv
     - english
     - postcodes.csv
-    - MrJob.pem
     - terms.csv
-    bootstrap:
-    - sudo easy_install -U distribute
-    - sudo apt-get install -y python-pip
-    - sudo pip install -U numpy
-    - sudo pip install -U pyyaml nltk
-    - sudo pip install scipy
-    ec2_instance_type: m2.4xlarge
-    num_ec2_core_instances: 3
-    cmdenv:
-      TZ: America/Los_Angeles
-  hadoop:
-    jobconf:
-      mapred.task.timeout: 3600000
-    setup:
-    - VENV=/tmp/$mapred_job_id
-    - if [ ! -e $VENV ]; then virtualenv $VENV; fi
-    - . $VENV/bin/activate
-    - pip install mr3po simplejson
-    - sudo easy_install -U distribute
-    - sudo apt-get install -y python-pip
-    - sudo pip install -U numpy
-    - sudo pip install -U pyyaml nltk
-    - sudo pip install scipy
